# codesprint

./: .gitignore  LICENSE  README.md  pyproject.toml
src/codesprint/: __init__.py  cli.py  detector.py  executor.py  formatter.py  history.py  runner.py
tests/: test_codesprint.py
